fixed runPachira.bat and runPachira.sh